# nanonumpy

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: rust_bench.rs
docs/: 01_python_to_rust.md  02_memory_layout.md  03_scalar_baseline.md  04_x86_simd.md  05_arm_neon.md  06_dispatch.md  07_registers_and_lanes.md  08_benchmarking.md  09_ffi_python_to_rust.md  10_pure_python_vs_rust.md  11_naive_rust_vs_simd.md  12_from_intrinsics_to_assembly.md  13_cpu_execution_model.md
examples/: basic_usage.py  compare_with_numpy.py  full_performance_comparison.py
nano_numpy_simd/: __init__.py  pure_python.py
python/examples/: benchmark.py  buffer_protocol_benchmark.py  naive_rust_baseline.py  pure_python_baseline.py  simd_baseline.py
python/nano_numpy_simd/: __init__.py
src/: asm_explain.rs  dispatch.rs  ffi_explain.rs  lib.rs  naive_rust.rs  ops.rs  scalar.rs  simd_arm.rs  simd_x86.rs
tests/: test_against_numpy.py  test_basic.py  test_buffer_api.py  test_errors.py  test_performance_correctness.py
