[package]
name = "nano_numpy_simd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Educational Rust SIMD backend for a tiny NumPy-like Python package."

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.28.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rust_bench"
harness = false
