[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "nano-numpy-simd"
version = "0.1.0"
description = "Tiny educational NumPy-like package implemented in Rust with SIMD dispatch."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "nano-numpy-simd contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2.0",
    "numpy>=1.24",
    "pytest>=8.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "nano_numpy_simd._native"
python-source = "."
